--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -1,6 +1,9 @@
 @import 'normalize.css';
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600;700&display=swap');
 :root{
+    //Default-layout 
+    --default-layout-header-height:60px;
+    --default-layout-width:1150px;
     --primary :#fd8c73;
 
 }
@@ -8,6 +11,8 @@ html{
     font-size: 62.5%;
 }
 *{
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
 }
 body{
