--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -5,6 +5,7 @@
     --default-layout-header-height:60px;
     --default-layout-width:1150px;
     --primary :#fd8c73;
+    --text-color:#000;
 
 }
 html{
@@ -20,4 +21,12 @@ body{
     font-family: "Roboto",sans-serif;
     line-height: 1.5;
     text-rendering: optimizeSpeed;
+}
+button,input,[tabindex]{
+    outline: none;
+    border: none;
+}
+a[hef]{
+    color: var(--text-color);
+    text-decoration: none;
 }
