--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -1,12 +1,79 @@
 .wrapper{
+    --search-border-radius:92px;
     width: 100%;
-    height:var(default-layout-header-height);
+    height:var(--default-layout-header-height,60px);
     box-shadow: 0px 1px 1px rgb(0 0 0 / 12%);
     display: flex;
     justify-content: center;
 }
 .inner{
     height: 100%;
-    width: var(default-layout-width);
-    background-color: #ccc;
+    width: 1150px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.logo{
+    
+}
+.search{
+    width: 361px;
+    height: 46px;
+    padding-left: 16px;
+    background: rgba(22, 24, 35, 0.06);
+    border-radius: var(--search-border-radius);
+    display: flex;
+    position: relative;
+    border:  1.5px solid rgba(22, 24, 35, 0.06) ;
+    input{
+        flex: 1;
+        height: 100%;
+        color: black;
+        font-size: 1.6rem;
+        border: none;
+        outline: none;
+        background-color: transparent;
+        caret-color: red;
+    }
+    &::after{
+    content: '';
+    position: absolute;
+    height: 28px;
+    background-color: rgba(22, 24, 35, 0.12);
+    width: 1px;
+    top: 9px;
+    right: 52px;
+    
+   }
+    &:focus-within {
+        border-color:  rgba(22,24,35,0.2) ;
+
+        }    
+    
+}
+
+.clear-btn,.loading{
+    position: absolute;
+    right: 52px;
+    top: 50%;
+    transform: translateY(-50% );
+    right: 70px;
+    color: rgba(22, 24, 35, 0.34);
+}
+.search-btn{
+    width: 52px;
+    height: 100%;
+    border-top-right-radius: var(--search-border-radius);
+    border-bottom-right-radius: var(--search-border-radius);
+    font-size: 1.8rem;
+    color:rgba(22, 24, 35, 0.34);
+    &:hover{
+        background-color: rgba(22, 24, 35, 0.03);
+        cursor: pointer;
+    }
+}
+.search-results{
+    width: 361px;
+    
 }
