--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -4,7 +4,7 @@
     //Default-layout 
     --default-layout-header-height:60px;
     --default-layout-width:1150px;
-    --primary :#fd8c73;
+    --primary :#f6789a;
     --text-color:#000;
 
 }
